--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-
+{% block carousel %}{% endblock %}
 {% block content %}
         <!-- Three columns of text below the carousel -->
         <div class="row">
