--- a/public/assets/css/boutiquenaglaa.css
+++ b/public/assets/css/boutiquenaglaa.css
@@ -10,3 +10,26 @@
   background-color: #dfeaff;
   padding-top: 25px;
 }
+.product-container {
+  margin-bottom:156px;
+
+}
+.product-item {
+  margin-top: 50px;
+
+}
+.product-item h5 {
+  text-transform: uppercase;
+  font-size: 15px;
+  margin-bottom: 1px;
+}
+
+.product-item .product-subtitle {
+  font-size: 14px;
+  display: block;
+  margin-bottom: 10px;
+}
+.product-item .product-price {
+   font-size: 14px;
+  font-weight: bold;
+}
