--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -9,7 +9,7 @@
         {% for product in products %}
       <div class="col-md-4">
         <div class="product-item text-center">
-            <img src="/uploads/{{ product.illustration }}" alt="{{product.name }}" class="img-fluid">
+            <a href="{{ path('product',{'slug' : product.slug}) }}"><img src="/uploads/{{ product.illustration }}" alt="{{product.name }}" class="img-fluid"></a>
             <h5>{{ product.name }}</h5>
             <span class="product-subtitle">{{  product.subtitle }}</span>
                <span class="product-price"> {{ (product.price /100) | number_format(2,',','.') }}</span> 
