--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -3,21 +3,32 @@
 {% block title %}Nos produits - Boutiquenaglaa{% endblock %}
 
 {% block content %}
-    <h1>Nos Produits</h1>
-
-    <div class="row product-container">
-        {% for product in products %}
-      <div class="col-md-4">
-        <div class="product-item text-center">
-            <a href="{{ path('product',{'slug' : product.slug}) }}"><img src="/uploads/{{ product.illustration }}" alt="{{product.name }}" class="img-fluid"></a>
-            <h5>{{ product.name }}</h5>
-            <span class="product-subtitle">{{  product.subtitle }}</span>
-               <span class="product-price"> {{ (product.price /100) | number_format(2,',','.') }}</span> 
-        </div>
+  <div class="row">
+      <div class="col-md-3">
+          <h3>Filtrer</h3>
+          {{ form(form) }}
       </div>
 
-        {% endfor %} 
+      <div class="col-md-9">
+        <h1>Nos Produits</h1>
 
-    </div>
+            <div class="row product-container">
+                {% for product in products %}
+              <div class="col-md-4">
+                <div class="product-item text-center">
+                    <a href="{{ path('product',{'slug' : product.slug}) }}"><img src="/uploads/{{ product.illustration }}" alt="{{product.name }}" class="img-fluid"></a>
+                    <h5>{{ product.name }}</h5>
+                    <span class="product-subtitle">{{  product.subtitle }}</span>
+                      <span class="product-price"> {{ (product.price /100) | number_format(2,',','.') }}</span> 
+                </div>
+              </div>
+
+                {% endfor %} 
+
+            </div>
+      </div>
+  </div>
+
+    
 
 {% endblock %}
