--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -16,7 +16,7 @@
             <span class="product-page-price">{{ (product.price /100) | number_format(2,',','.') }}</span>
             <hr>
             <p>{{ product.description }}</p>
-            <a href="" class="btn btn-primary">Ajouter au panier</a>
+            <a href="{{ path('add_to_cart',{'id': product.id}) }}" class="btn btn-primary">Ajouter au panier</a>
         </div>
     </div>
 
