finish panier except changer session with sessionslack

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,9 @@
                 {% endif %}
 
             </div>
+            <a href="{{ path('cart')}}"> 
+                <img src="{{ asset('assets/img/shopping-cart.png') }}" class="cart-icon" alt="mom panier">
+            </a>
         </div>
     </nav>
 </header>
