--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -8,45 +8,63 @@
 
 Retrouvez l'ensemble des produits que vous avez ajouté à votre panier
 MON panier
-{{dump(cart)}}
-<table class="table mt-3">
-  <thead>
+
+{% if cart|length > 0 %}
+    <table class="table mt-3">
+    <thead>
     <tr>
-      <th scope="col">Produit</th>
-      <th scope="col"></th>
-      <th scope="col">Quantite</th>
-      <th scope="col">Prix</th>
-      <th scope="col">Total</th>
+        <th scope="col">Produit</th>
+        <th scope="col"></th>
+        <th scope="col">Quantite</th>
+        <th scope="col">Prix</th>
+        <th scope="col">Total</th>
+        <th scope="col"></th>
+
 
     </tr>
-  </thead>
-  <tbody>
-{% set total = null %}
-    
-{% endblock %}
-{% for product in cart %}
-{{ dump(product) }}
+    </thead>
+    <tbody>
+    {% set total = null %}
+
+    {% endblock %}
+    {% for product in cart %}
+    {{ dump(product) }}
     <tr>
-      <th >
+        <th >
         <img src="./uploads/{{ product.product.illustration }}" alt="{{ product.product.name  }}" height= "75px">
-      </th>
-      <th >
+        </th>
+        <th >
         {{ product.product.name  }}<br>
         <small> {{ product.product.subtitle  }}</small>
-      </th>
-      <td>x {{ product.quantity }}</td>
-      <td>{{ (product.product.price /100) | number_format(2,',','.') }}</td>
-      <td>{{ ((product.product.price * product.quantity) /100) | number_format(2,',','.') }}</td>
+        </th>
+        <td>
+            <a href="{{ path('add_to_cart', {'id': product.product.id})  }}">
+                <img src="{{ asset('assets/img/minus-sign.png') }}" height="12px" alt="retirer un produit">
+            </a>
+            x {{ product.quantity }}
+            <a href="{{ path('decrease_to_cart',{'id': product.product.id}) }}">
+                <img src="{{ asset('assets/img/plus.png') }}" height="12px" alt="ajouter un produit">
+            </a>
+        </td>
+        <td>{{ (product.product.price /100) | number_format(2,',','.') }}</td>
+        <td>{{ ((product.product.price * product.quantity) /100) | number_format(2,',','.') }}</td>
+        <a href="{{ path('delete_to_cart', {'id': product.product.id}) }}">
+        <td><img src="{{ asset('assets/img/delete.png') }}" height="18px" alt="suprimer mon produit"></td>
+        </a>
     </tr>
     {% set total = total + (product.product.price * product.quantity) %}
         
     {% endblock %}
-{% endfor %}
-  </tbody>
-</table>
-<div class="text-right mb-5">
-<b>Nombre de produit:</b> {{ cart|length }}<br>
-<b>Total de mon Panier: {{ ((total) /100) | number_format(2,',','.') }}</b> 
-<a href="" class="btn btn-success btn-block">Valider mon panier</a>
-</div>
+    {% endfor %}
+    </tbody>
+    </table>
+    <div class="text-right mb-5">
+    <b>Nombre de produit:</b> {{ cart|length }}<br>
+    <b>Total de mon Panier:</b>  {{ (total /100) | number_format(2,',','.') }} $
+    <a href="" class="btn btn-success btn-block mt-3">Valider mon panier</a>
+    </div>
+{% else %}
+    <hr>
+    <p><b>Votre panier est vide</b></p>
+{% endif %}
 {% endblock %}
