--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -7,6 +7,8 @@
 Bienvenue {{ app.user.firstname }} dans votre compte.<br/>C'est dans cet espace que vous allez pouvoir gérer toutes informations personnelles.
 <hr>
 - <a href="{{ path('account_password') }}"> Modifier mon mot de passe</a><br>
+- <a href="{{ path('account_address') }}">Gerer mes addresses</a><br>
+
 
     
 
