--- a/templates/account/address.html.twig
+++ b/templates/account/address.html.twig
@@ -11,7 +11,24 @@ C'est dans cet espace que vous allez pouvoir gérer toutes vos address.<br/>
 {% if app.user.addresses | length == 0 %}
 <p class="text-center">Vous n'avez pas encore ajoute d'address dans votre compte client.Pour ajouter une ,veuillez<a href="{{ path('account_address_add') }}">Cliquer ice</a></p>
 {% else %}
-afficher l'addresse
+
+ <div class = "row">
+  {% for address in app.user.addresses %}
+  
+      <div class="col-md-4">
+             <div class="card" style="width: 18rem;">
+    <div class="card-body">
+        <h5 class="card-title">{{ address.name }}</h5>
+        <p class="card-text">{{ address.address }}<br>
+           {{ address.postal }} - {{ address.city }}  -{{ address.country  }}
+        </p>
+        <a href="{{ path('account_address_edit', {'id': address.id}) }}">Modifier</a> | <a href="{{ path('account_address_delete',{'id': address.id}) }}">Supprimer</a>
+    </div>
+    </div>
+      </div>
+   
+  {% endfor %}
+</div>
 {% endif %}
     
 
