finish sucess and failure page of payment

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{{asset('assets/css/bootstrap.min.css')}}" rel="stylesheet">
     <link href="{{asset('assets/css/boutiquenaglaa.css')}}" rel="stylesheet">
+    {% block javascripte %}{% endblock %}
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -145,4 +146,5 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="{{asset('assets/js/bootstrap.bundle.js')}}"></script>
 </body>
+{% block javascript %}{% endblock %} 
 </html>
