finish commande details in user profile

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -8,6 +8,7 @@ Bienvenue {{ app.user.firstname }} dans votre compte.<br/>C'est dans cet espace 
 <hr>
 - <a href="{{ path('account_password') }}"> Modifier mon mot de passe</a><br>
 - <a href="{{ path('account_address') }}">Gerer mes addresses</a><br>
+- <a href="{{ path('account_order') }}">Mes Commandes</a><br>
 
 
     
