--- a/templates/order_success/index.html.twig
+++ b/templates/order_success/index.html.twig
@@ -14,6 +14,6 @@ Votre commande sera livree par <strong>{{ order.carrierName }}</strong> a l'adre
 
 {{ order.delivery |raw }}
 <hr>
-pour suivre votre commande, rendez vous dans votre <a href=" {{ path('account') }}">compte</a>.
+pour suivre votre commande, rendez vous dans votre <a href=" {{ path('account_order') }}">compte</a>.
 
 {% endblock %}
